[profile.release]
codegen-units = 1
lto = true
strip = "symbols"

[workspace]
resolver = "2"
members = [
    "crates/blocks_report",
    "crates/blocks_report_data",
    "crates/macros",
    "crates/minecraft_packets",
    "crates/minecraft_protocol",
    "crates/net",
    "crates/pico_binutils",
    "crates/pico_nbt",
    "crates/pico_structures",
    "crates/pico_text_component",
    "crates/protocol_version",
    "crates/protocol_version_macro",
    "crates/registries",
    "crates/registries_data",
    "pico_limbo",
]

[workspace.dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
flate2 = "1.1.2"
hmac = "0.12.1"
proc-macro2 = "1.0.101"
quick-xml = "0.38.3"
quote = "1.0.40"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
subtle = "2.6.1"
syn = { version = "2.0.106", features = ["full"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "io-util", "net", "time", "sync", "signal"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4"] }
walkdir = "2.5.0"
