[package]
name = "pico_limbo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minecraft_protocol = { path = "../libraries/minecraft_protocol" }
minecraft_packets = { path = "../libraries/minecraft_packets" }
minecraft_server = { path = "../libraries/minecraft_server" }
thiserror = "2.0.11"
clap = { version = "4.5", features = ["derive"] }
