[package]
name = "pico_limbo"
version = "1.5.0+mc1.21.8"
edition = "2024"
build = "build/main.rs"

[dependencies]
minecraft_packets = { path = "../crates/minecraft_packets" }
minecraft_protocol = { path = "../crates/minecraft_protocol" }
pico_structures = { path = "../crates/pico_structures" }
net = { path = "../crates/net" }
macros = { path = "../crates/macros" }
clap = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
minecraft_protocol = { path = "../crates/minecraft_protocol" }
serde_json = { workspace = true }
walkdir = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
