[package]
name = "pico_limbo"
version = "1.5.2+mc1.21.8"
edition = "2024"

[dependencies]
blocks_report = { path = "../crates/blocks_report" }
macros = { path = "../crates/macros" }
minecraft_packets = { path = "../crates/minecraft_packets" }
minecraft_protocol = { path = "../crates/minecraft_protocol" }
net = { path = "../crates/net" }
pico_structures = { path = "../crates/pico_structures" }
pico_text_component = { path = "../crates/pico_text_component" }
registries = { path = "../crates/registries" }
clap = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
