[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
protocol = { path = "../protocol/protocol" }
thiserror = "2.0.4"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
walkdir = "2.5.0"
rand = "0.8.5"
clap = { version = "4.5.23", features = ["derive"] }
