[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
protocol = { path = "../libraries/protocol" }
thiserror = "2.0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
rand = "0.9.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1.86"
anyhow = { version = "1.0" }

[dev-dependencies]
tokio-test = "0.4.4"
