[package]
name = "pico_limbo"
version = "1.3.2+mc1.21.8"
edition = "2024"

[features]
default = ["server"]
server = [
    "dep:async-trait",
    "dep:hmac",
    "dep:rand",
    "dep:serde",
    "dep:sha2",
    "dep:subtle",
    "dep:thiserror",
    "dep:toml",
]
ping_util = [
    "dep:anyhow",
]

[dependencies]
minecraft_packets = { path = "../../crates/minecraft_packets" }
minecraft_protocol = { path = "../../crates/minecraft_protocol" }
net = { path = "../../crates/net" }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
clap = { workspace = true }
hmac = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
subtle = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true }
toml = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
