[package]
name = "pico_ping"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros", "io-util", "net"] }
minecraft_packets = { path = "../../crates/minecraft_packets" }
minecraft_protocol = { path = "../../crates/minecraft_protocol" }
anyhow = "1.0"
net = { path = "../../crates/net" }
serde_json = "1.0.138"
