[package]
name = "pico_ping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
minecraft_packets = { path = "../../crates/minecraft_packets" }
minecraft_protocol = { path = "../../crates/minecraft_protocol" }
net = { path = "../../crates/net" }
serde_json = { workspace = true }
tokio = { workspace = true }
