[package]
name = "pico_wake"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["process", "io-std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
minecraft_protocol = { path = "../../crates/minecraft_protocol" }
minecraft_packets = { path = "../../crates/minecraft_packets" }
minecraft_server = { path = "../../crates/minecraft_server" }
net = { path = "../../crates/net" }
thiserror = "2.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
tokio-util = "0.7"
