[package]
name = "macros"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol_version = { path = "../protocol_version" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
