[package]
name = "minecraft_packets"
version = "0.1.0"
edition = "2024"

[dependencies]
minecraft_protocol = { path = "../minecraft_protocol" }
pico_text_component = { path = "../pico_text_component" }
pico_structures = { path = "../pico_structures" }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
