[package]
name = "minecraft_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
nbt = { path = "../pico_nbt" }
packet_serializer = { path = "../packet_serializer" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
