[package]
name = "minecraft_protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
pico_nbt = { path = "../pico_nbt" }
pico_binutils = { path = "../pico_binutils", features = ["binary_reader", "binary_writer", "length_prefixed", "var_int", "uuid"] }
protocol_version = { path = "../protocol_version" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
