[package]
name = "minecraft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time", "sync", "signal"] }
tracing = "0.1"
minecraft_protocol = { path = "../minecraft_protocol" }
minecraft_packets = { path = "../minecraft_packets" }
net = { path = "../net" }
thiserror = "2.0"
rand = "0.9.0"
async-trait = "0.1"
anyhow = { version = "1.0" }
