[package]
name = "pico_binutils"
version = "0.1.0"
edition = "2024"

[features]
default = []
binary_reader = []
binary_writer = []
length_prefixed = []
var_int = []
uuid = ["dep:uuid"]
string_indexer = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, optional = true }
