[package]
name = "pico_structures"
version = "0.1.0"
edition = "2024"

[dependencies]
minecraft_protocol = { path = "../minecraft_protocol" }
pico_binutils = { path = "../pico_binutils", features = ["binary_reader"] }
pico_nbt = { path = "../pico_nbt" }
blocks_report = { path = "../blocks_report" }
flate2 = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
