[package]
name = "pico_text_component"
version = "0.1.0"
edition = "2024"

[dependencies]
pico_nbt = { path = "../pico_nbt" }
minecraft_protocol = { path = "../minecraft_protocol" }
quick-xml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
